[workspace]
members = ["days/day01", "days/day02", "days/day03", "days/day04", "days/day05", "days/day06", "days/day07", "days/day08", "days/day09", "days/day10", "days/day11", "days/day12", "days/day13", "days/day14", "days/day15", "days/day16", "days/day17", "days/day18", "days/day19", "days/day20", "days/day21", "days/day22"]
resolver = "2"

[workspace.dependencies]
itertools = "0.13.0"
parameterized = "2.0.0"
common = { path = "common"}
